[package]
name = "libsmpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libsmpy"
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4.3"
libsm = "0.5.1"
pyo3 = { version = "0.19.0", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.19.0"

